Automation Demo/VMCustomData/Step3/azuredeploy.json
{
	"$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
	"contentVersion": "1.0.0.0",
	"parameters": {
		"adminUsername": {
			"type": "string",
			"metadata": {
				"description": "Username for the Virtual Machine."
			},
			"defaultValue": "azureuser"
		},
		"adminPassword": {
			"type": "securestring",
			"metadata": {
				"description": "Password for the Virtual Machine."
			},
			"defaultValue": "asrdemo@teamcim123"
		},
		"windowsOSVersion": {
			"type": "string",
			"defaultValue": "2012-R2-Datacenter",
			"allowedValues": [
				"2008-R2-SP1",
				"2012-Datacenter",
				"2012-R2-Datacenter"
			],
			"metadata": {
				"description": "The Windows version for the VM. This will pick a fully patched image of this given Windows version. Allowed values: 2008-R2-SP1, 2012-Datacenter, 2012-R2-Datacenter."
			}
		}
	},
	"variables": {
		"imagePublisher": "MicrosoftWindowsServer",
		"imageOffer": "WindowsServer",
		"nicName": "myASRVMNic",
		"subnetName": "Subnet-1",
		"publicIPAddressName": "ASRPublicIP",
		"publicIPAddressType": "Dynamic",
		"vmName": "MyASRVM",
		"vmSize": "Standard_DS2_v2",
		"virtualNetworkName": "sshVNET",
		"vnetID": "[resourceId('Microsoft.Network/virtualNetworks',variables('virtualNetworkName'))]",
		"subnetRef": "[concat(variables('vnetID'),'/subnets/',variables('subnetName'))]",
		"apiVersion": "2015-06-15",
		"uniqueDnsLabelPrefixasr": "[concat('teamcimasr', uniquestring(resourceGroup().id))]",
		"hostDNSNameScriptArgument": "[concat('*.',resourceGroup().location,'.cloudapp.azure.com')]",
		"networkSecurityGroupNameASR": "networkSecurityGroupASR",
		"ASRVault": "asrvault"
	},
	"resources": [{
			"apiVersion": "[variables('apiVersion')]",
			"type": "Microsoft.Network/publicIPAddresses",
			"name": "[variables('publicIPAddressName')]",
			"location": "[resourceGroup().location]",
			"properties": {
				"publicIPAllocationMethod": "[variables('publicIPAddressType')]",
				"dnsSettings": {
					"domainNameLabel": "[variables('uniqueDnsLabelPrefixasr')]"
				}
			}
		}, {
			"apiVersion": "2016-09-01",
			"type": "Microsoft.Network/networkSecurityGroups",
			"name": "[variables('networkSecurityGroupNameASR')]",
			"location": "[resourceGroup().location]",
			"properties": {
				"securityRules": [{
						"name": "rdp_rule",
						"properties": {
							"description": "Locks inbound down to RDP default port 3389.",
							"protocol": "Tcp",
							"sourcePortRange": "*",
							"destinationPortRange": "3389",
							"sourceAddressPrefix": "*",
							"destinationAddressPrefix": "*",
							"access": "Allow",
							"priority": 123,
							"direction": "Inbound"
						}
					}, {
						"name": "ssh_rule",
						"properties": {
							"description": "Locks inbound down to ssh default port 22.",
							"protocol": "Tcp",
							"sourcePortRange": "*",
							"destinationPortRange": "22",
							"sourceAddressPrefix": "*",
							"destinationAddressPrefix": "*",
							"access": "Allow",
							"priority": 124,
							"direction": "Inbound"
						}
					}, {
						"name": "nginx_rule",
						"properties": {
							"description": "Locks inbound down to http default port 80.",
							"protocol": "Tcp",
							"sourcePortRange": "*",
							"destinationPortRange": "80",
							"sourceAddressPrefix": "*",
							"destinationAddressPrefix": "*",
							"access": "Allow",
							"priority": 125,
							"direction": "Inbound"
						}
					}, {
						"name": "WinRM",
						"properties": {
							"description": "Locks inbound down to winrm default port 5986.",
							"protocol": "Tcp",
							"sourcePortRange": "*",
							"destinationPortRange": "5986",
							"sourceAddressPrefix": "*",
							"destinationAddressPrefix": "*",
							"access": "Allow",
							"priority": 126,
							"direction": "Inbound"
						}
					}, {
						"name": "WinRMlistne",
						"properties": {
							"description": "Locks inbound down to winrm default port 5986.",
							"protocol": "Tcp",
							"sourcePortRange": "*",
							"destinationPortRange": "5985",
							"sourceAddressPrefix": "*",
							"destinationAddressPrefix": "*",
							"access": "Allow",
							"priority": 127,
							"direction": "Inbound"
						}
					}, {
						"name": "ASRCSPort",
						"properties": {
							"description": "ASR Installer needs this port open",
							"protocol": "Tcp",
							"sourcePortRange": "*",
							"destinationPortRange": "9443",
							"sourceAddressPrefix": "*",
							"destinationAddressPrefix": "*",
							"access": "Allow",
							"priority": 128,
							"direction": "Inbound"
						}
					}
				]
			}
		}, {
			"apiVersion": "2016-12-01",
			"name": "[variables('ASRVault')]",
			"location": "[resourceGroup().location]",
			"type": "Microsoft.RecoveryServices/vaults",
			"sku": {
				"name": "RS0",
				"tier": "Standard"
			},
			"properties": {}
		}, {
			"apiVersion": "[variables('apiVersion')]",
			"type": "Microsoft.Network/networkInterfaces",
			"name": "[variables('nicName')]",
			"location": "[resourceGroup().location]",
			"dependsOn": [
				"[concat('Microsoft.Network/publicIPAddresses/', variables('publicIPAddressName'))]",
				"[concat('Microsoft.Network/networkSecurityGroups/', variables('networkSecurityGroupNameASR'))]"
			],
			"properties": {
				"ipConfigurations": [{
						"name": "ipconfig1",
						"properties": {
							"privateIPAllocationMethod": "Dynamic",
							"publicIPAddress": {
								"id": "[resourceId('Microsoft.Network/publicIPAddresses',variables('publicIPAddressName'))]"
							},
							"subnet": {
								"id": "[variables('subnetRef')]"
							}
						}
					}
				],
				"networkSecurityGroup": {
					"id": "[resourceId('Microsoft.Network/networkSecurityGroups',variables('networkSecurityGroupNameASR'))]"
				}
			}
		}, {
			"apiVersion": "2016-04-30-preview",
			"type": "Microsoft.Compute/virtualMachines",
			"name": "[variables('vmName')]",
			"location": "[resourceGroup().location]",
			"dependsOn": [
				"[concat('Microsoft.Network/networkInterfaces/', variables('nicName'))]"
			],
			"properties": {
				"hardwareProfile": {
					"vmSize": "[variables('vmSize')]"
				},
				"osProfile": {
					"computername": "[variables('vmName')]",
					"adminUsername": "[parameters('adminUsername')]",
					"adminPassword": "[parameters('adminPassword')]"
				},
				"storageProfile": {
					"imageReference": {
						"publisher": "[variables('imagePublisher')]",
						"offer": "[variables('imageOffer')]",
						"sku": "[parameters('windowsOSVersion')]",
						"version": "latest"
					},
					"osDisk": {
						"createOption": "FromImage"
					}
				},
				"networkProfile": {
					"networkInterfaces": [{
							"id": "[resourceId('Microsoft.Network/networkInterfaces',variables('nicName'))]"
						}
					]
				}
			},
			"resources": [{
					"type": "Microsoft.Compute/virtualMachines/extensions",
					"name": "[concat(variables('vmName'),'/WinRMCustomScriptExtension')]",
					"apiVersion": "[variables('apiVersion')]",
					"location": "[resourceGroup().location]",
					"dependsOn": [
						"[concat('Microsoft.Compute/virtualMachines/', variables('vmName'))]"
					],
					"properties": {
						"publisher": "Microsoft.Compute",
						"type": "CustomScriptExtension",
						"typeHandlerVersion": "1.4",
						"settings": {
							"fileUris": [
								"https://raw.githubusercontent.com/alihhussain/AzureTemplates/master/Automation%20Demo/VMCustomData/Step3/ConfigureWinRM.ps1",
								"https://raw.githubusercontent.com/alihhussain/AzureTemplates/master/Automation%20Demo/VMCustomData/Step3/makecert.exe",
								"https://raw.githubusercontent.com/alihhussain/AzureTemplates/master/Automation%20Demo/VMCustomData/Step3/winrmconf.cmd",
                                "https://raw.githubusercontent.com/alihhussain/AzureTemplates/master/Automation%20Demo/VMCustomData/Step3/asr_cred_dl.ps1"
							],
							"commandToExecute": "[concat('powershell -ExecutionPolicy Unrestricted -file ConfigureWinRM.ps1 ',variables('hostDNSNameScriptArgument'))]"
						}
					}
				}
			]
		}
	],
    "outputs": {
		"ASRPublicIP": {
			"type": "string",
			"value": "[concat(variables('uniqueDnsLabelPrefixasr'), '.', resourceGroup().location, '.cloudapp.azure.com')]"
		}
	}
}
